src/test/ui/parser/removed-syntax-enum-newtype.stderr
error: expected one of `<`, `where`, or `{`, found `=`
  --> $DIR/removed-syntax-enum-newtype.rs:1:8
   |
LL | enum e = isize; //~ ERROR expected one of `<`, `where`, or `{`, found `=`
   |        ^ expected one of `<`, `where`, or `{` here

error: aborting due to previous error

